--- a/300x600/isi.css
+++ b/300x600/isi.css
@@ -221,3 +221,71 @@ background: #d7d7d7;
   box-shadow: 0 0 1px rgba(255,255,255,.5);
   height: 24px;
 }
+#isi-container-hm {
+    position: absolute;
+    bottom: 0px;
+    height: 179px;
+    width: 300px;
+    background-color: #ffffff;
+    padding: 10px 1px 0px 7px;
+    box-sizing: border-box;
+    overflow: hidden;
+    overflow-y: scroll; /* Allow scrolling and add a vertical scrollbar */
+    z-index: 99;
+}
+
+#isi-container-hm .main-copy {
+    letter-spacing: 0px;
+    line-height: 14px;
+    font-size: 10.8px;
+}
+
+#isi-container-hm .main-copy h3 {
+    font-size: 11.8px;
+}
+
+#isi-container-hm .medium-margin {
+    margin-bottom: 4px;
+    margin-top: 0px;
+}
+
+#isi_links_hm {
+    position: absolute;
+    width: 300px;
+    height: auto;
+    top: 400px;
+    background-size: contain;
+    /* background-image: url(isi_links.png); */
+    opacity: 1;
+    z-index: 101;
+    border-top: 1px solid #fff;
+    height: 16px;
+}
+
+#presc_hm, #medGuide_hm {
+    position: absolute; 
+    height: 18px;
+    z-index: 1100;
+    cursor: pointer;
+    background: #004f5e; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 9.5px;
+    text-align: center;
+    line-height: 18px;
+    color:#fff;
+    font-weight: 300;
+}
+#presc_hm a, #medGuide_hm a {
+   text-decoration:none;
+   color:#fff;
+}    
+#presc_hm {
+    border-right: 1px solid #fff;
+    text-align: left;
+    padding-left: 7px;
+    width: 176px;
+}
+#medGuide_hm {
+    right: 0;
+    width: 124px; 
+}
