--- a/160x600/isi.css
+++ b/160x600/isi.css
@@ -164,6 +164,7 @@ strong {
 }
 
 .sublist-copy {
+    font-size: 10.8px;
     display: block;
     margin-left: -6px;
 }
@@ -222,6 +223,7 @@ background: #d7d7d7;
     padding-top: 12px;
     height: 234px;
     width: 160px;
+    padding: 2px 0px 10px 6px;
     bottom: 0px;
 }
 
@@ -229,6 +231,7 @@ background: #d7d7d7;
     letter-spacing: 0px;
     line-height: 14.5px;
     font-size: 11.3px;
+    margin-top: 8px;
 }
 
 #isi-container-hm .main-copy h3 {
