--- a/728x90/isi.css
+++ b/728x90/isi.css
@@ -226,16 +226,17 @@ background: #d7d7d7;
 #isi-container-hm {
     width: 250px;
     right: -2px;
+    padding: 6px 0px 8px 4px;
 }
 
 #isi-container-hm .main-copy {
     letter-spacing: 0px;
-    line-height: 14px;
-    font-size: 9px;
+    line-height: 12px;
+    font-size: 9.1px;
 }
 
 #isi-container-hm .main-copy h3 {
-    font-size: 11.8px;
+    font-size: 9.8px;
 }
 
 #isi-container-hm .medium-margin {
